further reduce cli noise